<resources>
    <string name="app_name">Minesweeper</string>
    <string name="new_game">New Game</string>
    <string name="select_a_difficulty">Select a difficulty</string>
    <string name="flag">flag</string>
    <string name="mine">Mine</string>
    <string name="number_of_mines">Max. Height * Width - 1</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="pickaxe">pickaxe</string>
    <string name="loss">You lose!</string>
    <string name="win">You won!</string>
    <string name="end_of_game_message">Time: %s\n\nMoves: %s\n\nPlay again?</string>
    <string name="play_again">Play Again?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="settings">Settings</string>
    <string name="pick_a_difficulty_hint">Difficulty</string>
    <string name="pick_a_difficulty_helper">Pick your difficulty</string>
    <string name="submit">submit</string>
    <string name="height">Height</string>
    <string name="custom_max">Max. 50</string>
    <string name="width">Width</string>
    <string name="enter_a_value">Enter a Value</string>
    <string name="max_number_of_mines">Max. Mines: %s</string>
    <string name="button_display">Button Orientation (Right-to-Left)</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="time">Time: %s</string>
    <string name="moves">Moves: %d</string>
    <string name="complexities">Complexity: %s</string>
    <string name="games_played">Games Played: %s</string>
    <string name="win_percentage">Win pct.: %s</string>
    <string name="difficulty_on_launch">Difficulty on launch</string>
    <string name="set_difficulty_on_launch">Set difficulty on launch</string>
    <string name="statistics_games_won">Games Won: %d</string>
    <string name="statistics_current_streak">Current Streak: %d</string>
    <string name="statistics_average_time">Average Time: %s %s %s</string>
    <string name="statistics_average_moves">Average Moves: %s</string>
    <string name="records_win_percentage">Win Percentage: %s</string>
    <string name="records_fastest_game">Fastest Game: %s %s %s</string>
    <string name="records_fewest_moves">Fewest Moves: %d</string>
    <string name="records_longest_streak">Longest Streak: %d</string>
    <string name="records">Records</string>
    <string name="statistics">Statistics</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="revoke_notice">To delete your account and all personal information associated with it, please
        contact josh.rose213@gmail.com
    </string>
    <string name="fastest_time">**Fastest Time**</string>
    <string name="fewest_moves">**Fewest Moves**</string>
    <string name="longest_streak">**Longest Streak**</string>
    <string name="username">Username</string>
    <string name="username_title">Username:</string>
    <string name="username_exists">Username exists</string>
    <string name="choose_username">Choose a username</string>
    <string name="leader_boards">Leader Boards</string>
    <string name="expert">Expert</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="easy">Easy</string>
    <string name="position">%d.</string>
    <string name="record">%s %s</string>
    <string name="profanity_filter">Username should not contain profanity</string>
    <string name="mine_assist">Mine Assist</string>
    <string name="mine_warning">Games using Mine Assist won\'t be recorded.</string>
    <string name="continue_">continue</string>
    <string name="warning">Warning!</string>
    <string name="forfeit">Forfeit?</string>
    <string name="forfeit_warning">If you select OK, your current game will be forfeited</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>